@@ -1,5 +1,8 @@
 2019-09-27  Jason Merrill  <jason@redhat.com>
 
+	* constexpr.c (cxx_fold_indirect_ref): Use similar_type_p.
+	(cxx_eval_indirect_ref): Likewise.  Improve error location.
+
 	* cp-tree.h (class iloc_sentinel): New.
 	* decl.c (grokdeclarator, finish_enum_value_list): Use it.
 	* mangle.c (mangle_decl_string): Use it.
